# vqmetric

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure  main.cpp
bench/: benchmark.cpp
cmake/: googlebench.cmake  googletest.cmake
include/: ImageUtil.hpp  Metric.hpp  Metric.hpp~  PSNR.hpp  PSNR.hpp~  SSIM.hpp  Util.hpp  Util.hpp~  VQM.hpp  VideoCaptureReader.hpp  VideoCaptureReader.hpp~  VideoReader.hpp  VideoReader.hpp~  Y4MReader.hpp  main.hpp
src/: ImageUtil.cpp  Metric.cpp  PSNR.cpp  PSNR.cpp~  SSIM.cpp  Util.cpp  Util.cpp~  VQM.cpp  VideoCaptureReader.cpp  VideoCaptureReader.cpp~  VideoReader.cpp~  Y4MReader.cpp  main.cpp  main.cpp~
